Allow the user to use a read only version
Allow the user to use a read only version

Give the user instructions on how to run a read only version of the application